# embedded-programing-with-moderm-C-plus-plus

./: CMakeLists.txt
example/: CMakeLists.txt
example/endianness/: CMakeLists.txt
example/endianness/src/: main.cpp
example/virtual/: CMakeLists.txt
example/virtual/src/: main.cpp
geting_start/: CMakeLists.txt
geting_start/hello_work/: CMakeLists.txt
geting_start/hello_work/src/: main.cpp
operator/: CMakeLists.txt
operator/assignment/: CMakeLists.txt
operator/assignment/src/: main.cpp
operator/custom_assigment_logic/src/: main.cpp
